# 3121A-POO-Ureche-Daniel

./: .gitignore  CMakeLists.txt  README.md
docs/: DOCUMENTATIE.md  GHID_HARDWARE.md
hardware/: arduino_controller.ino
include/: Camion.hpp  HardwareBridge.hpp  Intersectie.hpp  Logger.hpp  Masina.hpp  Motocicleta.hpp  Observer.hpp  ReteaRutiera.hpp  SimulareEngine.hpp  Strada.hpp  Vehicul.hpp
src/: Camion.cpp  HardwareBridge.cpp  Intersectie.cpp  Logger.cpp  Masina.cpp  Motocicleta.cpp  ReteaRutiera.cpp  SimulareEngine.cpp  Strada.cpp  main.cpp
tests/: main_tests.cpp
